--- a/index.html
+++ b/index.html
@@ -1,17 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>UWC Bot (Text + Voice)</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>UWC Bot Accessible Chat</title>
   <style>
     body { font-family: Arial, sans-serif; margin:0; }
-    .bar { display:flex; gap:8px; align-items:center; padding:10px; border-bottom:1px solid #eee; }
-    #voiceToggle { border:0; padding:10px 14px; border-radius:8px; cursor:pointer; background:#1e88e5; color:#fff; }
-    #voiceToggle:disabled { background:#9e9e9e; }
-    #status { font-size:14px; color:#555; flex:1; }
-    #webchat { width:100%; height: calc(100vh - 56px); }
-    /* Option 2: force-hide default Botpress mic buttons */
+    #webchat { width:100%; height: 100vh; }
+
+    /* Floating voice button in bottom-right corner */
+    #voiceToggle {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      border: 0;
+      padding: 14px;
+      border-radius: 50%;
+      cursor: pointer;
+      background: #1e88e5;
+      color: #fff;
+      font-size: 22px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      z-index: 9999;
+    }
+    #voiceToggle:disabled { background: #9e9e9e; }
+
+    /* Floating status box above voice button */
+    #status {
+      position: fixed;
+      bottom: 80px;
+      right: 20px;
+      font-size: 14px;
+      color: #555;
+      background: rgba(255,255,255,0.95);
+      padding: 8px 12px;
+      border-radius: 6px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.15);
+      max-width: 250px;
+      z-index: 9999;
+    }
+
+    /* Hide default Botpress voice button */
     .bpw-speech-button, .bpw-floating-button {
       display: none !important;
       visibility: hidden !important;
@@ -22,22 +51,21 @@
 </head>
 <body>
 
-<div class="bar">
-  <button id="voiceToggle">🎤 Start Voice</button>
-  <span id="status">You can type below or use voice 🎤</span>
-</div>
-
 <div id="webchat"></div>
 
+<!-- Custom voice button and status -->
+<button id="voiceToggle" aria-label="Start or stop voice input">🎤</button>
+<div id="status" aria-live="polite">You can type below or use voice 🎤</div>
+
 <script>
-  // Option 1: Initialize Botpress Webchat without default voice button
+  // Initialize Botpress Webchat without default voice
   window.botpress.init({
     botId: 'aa441515-3c65-48ea-acd1-91044111bed2',
     clientId: '4122d265-45f6-47ff-ad06-007367e5444b',
     selector: '#webchat',
     configuration: {
       enableTextInput: true,
-      enableVoice: false,  // disables top-left voice button
+      enableVoice: false,
       showConversationsButton: false,
       themeMode: 'light',
       fontFamily: 'Inter, Arial',
@@ -55,7 +83,7 @@
     const statusEl = document.getElementById('status');
     const voiceToggle = document.getElementById('voiceToggle');
 
-    // Function to speak text aloud
+    // Text-to-speech function
     function speak(text){
       window.speechSynthesis.cancel();
       const u = new SpeechSynthesisUtterance(text);
@@ -64,85 +92,11 @@
       window.speechSynthesis.speak(u);
     }
 
-    // Function to play short audio cues
+    // Audio cues function
     function playSound(type){
       const audio = new Audio();
       if(type === 'listening') audio.src = 'https://actions.google.com/sounds/v1/alarms/beep_short.ogg';
       else if(type === 'stopped') audio.src = 'https://actions.google.com/sounds/v1/alarms/alarm_clock.ogg';
-      else if(type === 'botSpeaking') audio.src = 'https://actions.google.com/sounds/v1/alarms/digital_watch_alarm_long.ogg';
-      audio.play();
-    }
-
-    // Speak bot replies and play cue
-    window.botpressWebChat.onEvent('incoming.message', (event)=>{
-      if(event.payload && event.payload.text){
-        playSound('botSpeaking');
-        speak(event.payload.text);
-      }
-    });
-
-    // Speech-to-Text setup
-    const Rec = window.SpeechRecognition || window.webkitSpeechRecognition;
-    if(!Rec){
-      statusEl.textContent = 'Voice input not supported in this browser. Please use Chrome.';
-      voiceToggle.disabled = true;
-      return;
-    }
-
-    const rec = new Rec();
-    rec.lang = 'en-US';
-    rec.interimResults = false;
-
-    let listening = false;
-
-    voiceToggle.addEventListener('click', ()=>{
-      if(!listening){
-        rec.start();
-        listening = true;
-        voiceToggle.textContent = '⏹ Stop Voice';
-        statusEl.textContent = 'Listening… (allow mic if asked)';
-        playSound('listening');
-      } else {
-        rec.stop();
-        listening = false;
-        voiceToggle.textContent = '🎤 Start Voice';
-        statusEl.textContent = 'You can type below or use voice 🎤';
-        playSound('stopped');
-      }
-    });
-
-    rec.onresult = (e)=>{
-      const said = e.results[0][0].transcript;
-      statusEl.textContent = `You said: ${said}`;
-      
-      // Send spoken text to bot
-      window.botpressWebChat.sendEvent({
-        type: 'input.text',
-        text: said,
-        payload: {},
-        channel: 'web'
-      });
-    };
-
-    rec.onerror = ()=>{
-      statusEl.textContent = 'Mic error. Try again.';
-      listening = false;
-      voiceToggle.textContent = '🎤 Start Voice';
-      playSound('stopped');
-    };
-    
-    rec.onend = ()=>{
-      if(listening){
-        listening = false;
-        voiceToggle.textContent = '🎤 Start Voice';
-        statusEl.textContent = 'You can type below or use voice 🎤';
-        playSound('stopped');
-      }
-    };
-  });
-</script>
-
-</body>
-</html>
+      else if(type === 'botSpeaking') audio.src = 'https://actions.google.com/sounds/v1/alarms/digital_watch_alarm_long_
 
 
