--- a/index.html
+++ b/index.html
@@ -1,46 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>UWC Bot Accessible Chat</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>UWC Bot (Text + Voice)</title>
   <style>
     body { font-family: Arial, sans-serif; margin:0; }
     #webchat { width:100%; height: 100vh; }
-
-    /* Floating voice button in bottom-right corner */
+    
+    /* Fixed voice button in bottom-right corner */
     #voiceToggle {
       position: fixed;
       bottom: 20px;
       right: 20px;
       border: 0;
-      padding: 14px;
+      padding: 12px 16px;
       border-radius: 50%;
       cursor: pointer;
       background: #1e88e5;
       color: #fff;
-      font-size: 22px;
+      font-size: 20px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.2);
       z-index: 9999;
     }
     #voiceToggle:disabled { background: #9e9e9e; }
 
-    /* Floating status box above voice button */
     #status {
       position: fixed;
       bottom: 80px;
       right: 20px;
       font-size: 14px;
       color: #555;
-      background: rgba(255,255,255,0.95);
-      padding: 8px 12px;
+      background: rgba(255,255,255,0.9);
+      padding: 6px 10px;
       border-radius: 6px;
       box-shadow: 0 2px 4px rgba(0,0,0,0.15);
       max-width: 250px;
       z-index: 9999;
     }
 
-    /* Hide default Botpress voice button */
+    /* Hide any default Botpress mic buttons */
     .bpw-speech-button, .bpw-floating-button {
       display: none !important;
       visibility: hidden !important;
@@ -54,11 +53,10 @@
 <div id="webchat"></div>
 
 <!-- Custom voice button and status -->
-<button id="voiceToggle" aria-label="Start or stop voice input">🎤</button>
-<div id="status" aria-live="polite">You can type below or use voice 🎤</div>
+<button id="voiceToggle">🎤</button>
+<div id="status">You can type below or use voice 🎤</div>
 
 <script>
-  // Initialize Botpress Webchat without default voice
   window.botpress.init({
     botId: 'aa441515-3c65-48ea-acd1-91044111bed2',
     clientId: '4122d265-45f6-47ff-ad06-007367e5444b',
@@ -83,7 +81,6 @@
     const statusEl = document.getElementById('status');
     const voiceToggle = document.getElementById('voiceToggle');
 
-    // Text-to-speech function
     function speak(text){
       window.speechSynthesis.cancel();
       const u = new SpeechSynthesisUtterance(text);
@@ -92,11 +89,77 @@
       window.speechSynthesis.speak(u);
     }
 
-    // Audio cues function
     function playSound(type){
       const audio = new Audio();
       if(type === 'listening') audio.src = 'https://actions.google.com/sounds/v1/alarms/beep_short.ogg';
       else if(type === 'stopped') audio.src = 'https://actions.google.com/sounds/v1/alarms/alarm_clock.ogg';
-      else if(type === 'botSpeaking') audio.src = 'https://actions.google.com/sounds/v1/alarms/digital_watch_alarm_long_
+      else if(type === 'botSpeaking') audio.src = 'https://actions.google.com/sounds/v1/alarms/digital_watch_alarm_long.ogg';
+      audio.play();
+    }
 
+    window.botpressWebChat.onEvent('incoming.message', (event)=>{
+      if(event.payload && event.payload.text){
+        playSound('botSpeaking');
+        speak(event.payload.text);
+      }
+    });
 
+    const Rec = window.SpeechRecognition || window.webkitSpeechRecognition;
+    if(!Rec){
+      statusEl.textContent = 'Voice input not supported in this browser. Please use Chrome.';
+      voiceToggle.disabled = true;
+      return;
+    }
+
+    const rec = new Rec();
+    rec.lang = 'en-US';
+    rec.interimResults = false;
+    let listening = false;
+
+    voiceToggle.addEventListener('click', ()=>{
+      if(!listening){
+        rec.start();
+        listening = true;
+        voiceToggle.textContent = '⏹';
+        statusEl.textContent = 'Listening… (allow mic if asked)';
+        playSound('listening');
+      } else {
+        rec.stop();
+        listening = false;
+        voiceToggle.textContent = '🎤';
+        statusEl.textContent = 'You can type below or use voice 🎤';
+        playSound('stopped');
+      }
+    });
+
+    rec.onresult = (e)=>{
+      const said = e.results[0][0].transcript;
+      statusEl.textContent = `You said: ${said}`;
+      window.botpressWebChat.sendEvent({
+        type: 'input.text',
+        text: said,
+        payload: {},
+        channel: 'web'
+      });
+    };
+
+    rec.onerror = ()=>{
+      statusEl.textContent = 'Mic error. Try again.';
+      listening = false;
+      voiceToggle.textContent = '🎤';
+      playSound('stopped');
+    };
+
+    rec.onend = ()=>{
+      if(listening){
+        listening = false;
+        voiceToggle.textContent = '🎤';
+        statusEl.textContent = 'You can type below or use voice 🎤';
+        playSound('stopped');
+      }
+    };
+  });
+</script>
+
+</body>
+</html>
