--- a/index.html
+++ b/index.html
@@ -7,17 +7,21 @@
   <style>
     body { font-family: Arial, sans-serif; margin:0; }
     .bar { display:flex; gap:8px; align-items:center; padding:10px; border-bottom:1px solid #eee; }
-    #voiceToggle { border:0; padding:10px 14px; border-radius:8px; cursor:pointer; background:#1e88e5; color:#fff; }
-    #voiceToggle:disabled { background:#9e9e9e; }
+    #voiceBtn, #stopBtn { border:0; padding:10px 14px; border-radius:8px; cursor:pointer; }
+    #voiceBtn { background:#1e88e5; color:#fff; }
+    #voiceBtn:disabled { background:#9e9e9e; }
+    #stopBtn { background:#f5f5f5; }
     #status { font-size:14px; color:#555; flex:1; }
     #webchat { width:100%; height: calc(100vh - 56px); }
   </style>
+  <!-- Botpress Webchat Script -->
   <script src="https://cdn.botpress.cloud/webchat/v3.2/inject.js"></script>
 </head>
 <body>
 
 <div class="bar">
-  <button id="voiceToggle">🎤 Start Voice</button>
+  <button id="voiceBtn">🎤 Speak</button>
+  <button id="stopBtn">⏹ Stop Voice</button>
   <span id="status">You can type below or use voice 🎤</span>
 </div>
 
@@ -41,21 +45,25 @@
     }
   });
 
+  // Voice Feature
   (function ready(cb){
     if(window.botpressWebChat){ cb(); } 
     else { setTimeout(() => ready(cb), 100); }
   })(function(){
-    const statusEl = document.getElementById('status');
-    const voiceToggle = document.getElementById('voiceToggle');
+    const statusEl=document.getElementById('status');
+    const voiceBtn=document.getElementById('voiceBtn');
+    const stopBtn=document.getElementById('stopBtn');
 
     // Text-to-Speech
     function speak(text){
-      window.speechSynthesis.cancel();
+      window.speechSynthesis.cancel();  // stop previous speech
       const u = new SpeechSynthesisUtterance(text);
       u.lang = 'en-US';
       u.rate = 1.0;
       window.speechSynthesis.speak(u);
     }
+
+    stopBtn.addEventListener('click',()=>window.speechSynthesis.cancel());
 
     // Speak bot replies aloud
     window.botpressWebChat.onEvent('incoming.message', (event)=>{
@@ -68,7 +76,7 @@
     const Rec = window.SpeechRecognition || window.webkitSpeechRecognition;
     if(!Rec){
       statusEl.textContent = 'Voice input not supported in this browser. Please use Chrome.';
-      voiceToggle.disabled = true;
+      voiceBtn.disabled = true;
       return;
     }
 
@@ -76,23 +84,11 @@
     rec.lang = 'en-US';
     rec.interimResults = false;
 
-    let listening = false;
-
-    voiceToggle.addEventListener('click', ()=>{
-      if(!listening){
-        // Start listening
-        window.speechSynthesis.cancel();
-        rec.start();
-        listening = true;
-        voiceToggle.textContent = '⏹ Stop Voice';
-        statusEl.textContent = 'Listening… (allow mic if asked)';
-      } else {
-        // Stop listening
-        rec.stop();
-        listening = false;
-        voiceToggle.textContent = '🎤 Start Voice';
-        statusEl.textContent = 'You can type below or use voice 🎤';
-      }
+    voiceBtn.addEventListener('click', ()=>{
+      window.speechSynthesis.cancel();
+      statusEl.textContent = 'Listening… (allow mic if asked)';
+      voiceBtn.disabled = true;
+      rec.start();
     });
 
     rec.onresult = (e)=>{
@@ -108,32 +104,13 @@
       });
     };
 
-    rec.onerror = ()=>{ statusEl.textContent = 'Mic error. Try again.'; listening = false; voiceToggle.textContent = '🎤 Start Voice'; };
-    rec.onend = ()=>{
-      if(listening){
-        listening = false;
-        voiceToggle.textContent = '🎤 Start Voice';
-        statusEl.textContent = 'You can type below or use voice 🎤';
-      }
-    };
-
-    // Optional: hide mic icon in webchat when text input is active
-    const observer = new MutationObserver(()=>{
-      const micIcon = document.querySelector('.bpw-speech-button');
-      const textInput = document.querySelector('.bpw-input');
-      if(micIcon && textInput){
-        if(document.activeElement === textInput){
-          micIcon.style.display = 'none';
-        } else {
-          micIcon.style.display = 'inline-block';
-        }
-      }
-    });
-    observer.observe(document.body, { childList:true, subtree:true });
+    rec.onerror = ()=>{ statusEl.textContent = 'Mic error. Try again.'; };
+    rec.onend = ()=>{ voiceBtn.disabled = false; };
   });
 </script>
 
 </body>
 </html>
+
 
 
