--- a/index.html
+++ b/index.html
@@ -1,132 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>UWC Bot (Voice Enabled)</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; }
-    .bar { display:flex; gap:8px; align-items:center; padding:10px; border-bottom:1px solid #eee; }
-    #voiceBtn, #stopBtn { border:0; padding:10px 14px; border-radius:8px; cursor:pointer; }
-    #voiceBtn { background:#1e88e5; color:#fff; }
-    #voiceBtn:disabled { background:#9e9e9e; }
-    #stopBtn { background:#f5f5f5; }
-    #status { font-size:14px; color:#555; }
-    #webchat { height: calc(100vh - 56px); }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>UWC Accessible Bot</title>
+<style>
+  body { font-family: Arial, sans-serif; margin:0; }
 
-  <!-- Botpress Webchat Script -->
-  <script src="https://cdn.botpress.cloud/webchat/v3.2/inject.js"></script>
-  <style>
-    #webchat .bpWebchat {
-      position: unset;
-      width: 100%;
-      height: 100%;
-      max-height: 100%;
-      max-width: 100%;
-    }
-    #webchat .bpFab {
-      display: none;
-    }
-  </style>
+  /* Botpress chat container */
+  #webchat { width:100%; height:100vh; }
+
+  /* Floating voice button */
+  #voiceBtn {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    border:0;
+    padding:14px;
+    border-radius:50%;
+    background:#1e88e5;
+    color:#fff;
+    font-size:22px;
+    cursor:pointer;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    z-index:9999;
+  }
+  #voiceBtn:disabled { background:#9e9e9e; cursor: not-allowed; }
+
+  /* Status box above button */
+  #status {
+    position: fixed;
+    bottom: 80px;
+    right: 20px;
+    font-size:14px;
+    color:#555;
+    background: rgba(255,255,255,0.95);
+    padding:8px 12px;
+    border-radius:6px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.15);
+    max-width:250px;
+    z-index:9999;
+  }
+
+  /* Hide default Botpress mic button */
+  .bpw-speech-button, .bpw-floating-button { display:none !important; }
+</style>
+
+<!-- Botpress Webchat Script -->
+<script src="https://cdn.botpress.cloud/webchat/v3.2/inject.js"></script>
 </head>
 <body>
 
-<div class="bar">
-  <button id="voiceBtn">🎤 Speak</button>
-  <button id="stopBtn">⏹ Stop Voice</button>
-  <span id="status"></span>
-</div>
-
-<!-- Botpress Chat Container -->
-<div id="webchat" style="width: 500px; height: 500px;"></div>
+<div id="webchat"></div>
+<button id="voiceBtn" aria-label="Start or stop voice input">🎤</button>
+<div id="status" aria-live="polite">You can type below or use voice 🎤</div>
 
 <script>
-  window.botpress.on("webchat:ready", () => {
-    window.botpress.open();
-  });
+  // Initialize Botpress
   window.botpress.init({
-    "botId": "aa441515-3c65-48ea-acd1-91044111bed2",
-    "configuration": {
-      "version": "v2",
-      "website": {},
-      "email": {},
-      "phone": {},
-      "termsOfService": {},
-      "privacyPolicy": {},
-      "color": "#3276EA",
-      "variant": "solid",
-      "headerVariant": "glass",
-      "themeMode": "light",
-      "fontFamily": "inter",
-      "radius": 4,
-      "feedbackEnabled": false,
-      "footer": "[⚡ by Botpress](https://botpress.com/?from=webchat)"
-    },
-    "clientId": "4122d265-45f6-47ff-ad06-007367e5444b",
-    "selector": "#webchat"
-  });
-</script>
-
-<!-- 🎤 Voice Feature -->
-<script>
-(function ready(cb){
-  if(window.botpress){ cb(); } 
-  else { setTimeout(() => ready(cb), 100); }
-})(function(){
-  const statusEl=document.getElementById('status');
-  const voiceBtn=document.getElementById('voiceBtn');
-  const stopBtn=document.getElementById('stopBtn');
-
-  // Text-to-Speech
-  function speak(text){
-    window.speechSynthesis.cancel();
-    const u=new SpeechSynthesisUtterance(text);
-    u.lang='en-US'; 
-    u.rate=1.0;
-    window.speechSynthesis.speak(u);
-  }
-  stopBtn.addEventListener('click',()=>window.speechSynthesis.cancel());
-
-  // Speak bot replies
-  window.botpress.on('message',(event)=>{
-    if(event.payload && event.payload.text){
-      speak(event.payload.text);
+    botId: 'aa441515-3c65-48ea-acd1-91044111bed2',
+    clientId: '4122d265-45f6-47ff-ad06-007367e5444b',
+    selector: '#webchat',
+    configuration: {
+      enableTextInput:true,
+      enableVoice:false,
+      showConversationsButton:false,
+      themeMode:'light',
+      fontFamily:'Inter, Arial',
+      radius:4,
+      headerVariant:'glass',
+      color:'#3276EA',
+      footer: "[⚡ by Botpress](https://botpress.com/?from=webchat)"
     }
   });
 
-  // Speech-to-Text
-  const Rec=window.SpeechRecognition||window.webkitSpeechRecognition;
-  if(!Rec){
-    statusEl.textContent='Voice input not supported in this browser. Please use Chrome.';
-    voiceBtn.disabled=true;
-    return;
-  }
+  (function ready(cb){
+    if(window.botpressWebChat){ cb(); } 
+    else { setTimeout(() => ready(cb), 100); }
+  })(function(){
+    const voiceBtn = document.getElementById('voiceBtn');
+    const statusEl = document.getElementById('status');
 
-  const rec=new Rec();
-  rec.lang='en-US';
-  rec.interimResults=false;
+    // Text-to-Speech function
+    function speak(text){
+      window.speechSynthesis.cancel();
+      const u = new SpeechSynthesisUtterance(text);
+      u.lang = 'en-US';
+      u.rate = 1.0;
+      window.speechSynthesis.speak(u);
+    }
 
-  voiceBtn.addEventListener('click',()=>{
-    window.speechSynthesis.cancel();
-    statusEl.textContent='Listening… (allow mic if asked)';
-    voiceBtn.disabled=true;
-    rec.start();
+    // Audio cues
+    function playSound(type){
+      const audio = new Audio();
+      if(type === 'listening') audio.src = 'https://actions.google.com/sounds/v1/alarms/beep_short.ogg';
+      else if(type === 'stopped') audio.src = 'https://actions.google.com/sounds/v1/alarms/alarm_clock.ogg';
+      else if(type === 'botSpeaking') audio.src = 'https://actions.google.com/sounds/v1/alarms/digital_watch_alarm_long.ogg';
+      audio.play();
+    }
+
+    // Speak bot replies aloud
+    window.botpressWebChat.onEvent('incoming.message', (event)=>{
+      if(event.payload && event.payload.text){
+        playSound('botSpeaking');
+        speak(event.payload.text);
+      }
+    });
+
+    // Speech-to-Text
+    const Rec = window.SpeechRecognition || window.webkitSpeechRecognition;
+    if(!Rec){
+      statusEl.textContent = 'Voice input not supported. Please use Chrome.';
+      voiceBtn.disabled = true;
+      return;
+    }
+
+    const rec = new Rec();
+    rec.lang = 'en-US';
+    rec.interimResults = false;
+    let listening = false;
+
+    voiceBtn.addEventListener('click', ()=>{
+      if(!listening){
+        // Start listening
+        rec.start();
+        listening = true;
+        voiceBtn.textContent = '⏹';
+        statusEl.textContent = 'Listening… (allow mic if asked)';
+        playSound('listening');
+      } else {
+        // Stop listening
+        rec.stop();
+        listening = false;
+        voiceBtn.textContent = '🎤';
+        statusEl.textContent = 'You can type below or use voice 🎤';
+        playSound('stopped');
+      }
+    });
+
+    rec.onresult = (e)=>{
+      const said = e.results[0][0].transcript;
+      statusEl.textContent = `You said: ${said}`;
+      window.botpressWebChat.sendEvent({
+        type:'input.text',
+        text:said,
+        payload:{},
+        channel:'web'
+      });
+    };
+
+    rec.onerror = ()=>{
+      statusEl.textContent = 'Mic error. Try again.';
+      listening = false;
+      voiceBtn.textContent='🎤';
+      playSound('stopped');
+    };
+
+    rec.onend = ()=>{
+      if(listening){
+        listening = false;
+        voiceBtn.textContent='🎤';
+        statusEl.textContent='You can type below or use voice 🎤';
+        playSound('stopped');
+      }
+    };
+
+    // Keyboard accessibility
+    voiceBtn.addEventListener('keyup', (e)=>{
+      if(e.key === 'Enter' || e.key === ' ') voiceBtn.click();
+    });
   });
-
-  rec.onresult=(e)=>{
-    const said=e.results[0][0].transcript;
-    statusEl.textContent=`You said: ${said}`;
-    window.botpress.sendEvent({type:'text', text: said});
-  };
-  rec.onerror=()=>{ statusEl.textContent='Mic error. Try again.'; };
-  rec.onend=()=>{ voiceBtn.disabled=false; };
-});
 </script>
 
 </body>
 </html>
-
-
 
 
