--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   body { font-family: Arial, sans-serif; margin:0; }
 
   /* Botpress chat container */
-  #webchat { width:100%; height:100vh; }
+  #webchat {
+    width: 100%;
+    height: 100vh;
+    max-width: 500px;   /* limit width on large screens */
+    margin: 0 auto;     /* center chat on large screens */
+  }
 
   /* Floating voice button */
   #voiceBtn {
@@ -40,10 +45,27 @@
     box-shadow: 0 2px 4px rgba(0,0,0,0.15);
     max-width:250px;
     z-index:9999;
+    word-wrap: break-word;
   }
 
   /* Hide default Botpress mic button */
   .bpw-speech-button, .bpw-floating-button { display:none !important; }
+
+  /* Responsive adjustments for mobile */
+  @media (max-width: 600px) {
+    #voiceBtn {
+      bottom: 15px;
+      right: 15px;
+      padding: 12px;
+      font-size: 20px;
+    }
+    #status {
+      bottom: 70px;
+      right: 15px;
+      max-width: 200px;
+      font-size: 12px;
+    }
+  }
 </style>
 
 <!-- Botpress Webchat Script -->
@@ -110,7 +132,7 @@
     // Speech-to-Text
     const Rec = window.SpeechRecognition || window.webkitSpeechRecognition;
     if(!Rec){
-      statusEl.textContent = 'Voice input not supported. Please use Chrome.';
+      statusEl.textContent = 'Voice features only work in Chrome. You can still type below.';
       voiceBtn.disabled = true;
       return;
     }
@@ -174,5 +196,7 @@
 
 </body>
 </html>
+
+
 
 
