--- a/index.html
+++ b/index.html
@@ -1,81 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>UWC Accessible Bot</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>UWC Bot (Mobile-Friendly, Voice Enabled)</title>
 <style>
-  body { font-family: Arial, sans-serif; margin:0; }
+  body { font-family: Arial, sans-serif; margin: 0; padding: 0; display: flex; flex-direction: column; align-items: center; }
 
-  /* Botpress chat container */
-  #webchat {
-    width: 100%;
-    height: 100vh;
-    max-width: 500px;   /* limit width on large screens */
-    margin: 0 auto;     /* center chat on large screens */
+  /* UWC Bot Button */
+  #openBot {
+    margin: 20px 0 10px 0;
+    padding: 12px 20px;
+    font-size: 18px;
+    background: #3276EA;
+    color: #fff;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
   }
 
-  /* Floating voice button */
-  #voiceBtn {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
+  /* Voice Controls */
+  #voiceControls {
+    display: none;
+    flex-direction: row;
+    gap: 8px;
+    margin-bottom: 10px;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  #voiceBtn, #stopBtn {
     border:0;
-    padding:14px;
-    border-radius:50%;
-    background:#1e88e5;
-    color:#fff;
-    font-size:22px;
+    padding:10px 14px;
+    border-radius:8px;
     cursor:pointer;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-    z-index:9999;
+    font-size:16px;
   }
-  #voiceBtn:disabled { background:#9e9e9e; cursor: not-allowed; }
+  #voiceBtn { background:#1e88e5; color:#fff; }
+  #voiceBtn:disabled { background:#9e9e9e; cursor:not-allowed; }
+  #stopBtn { background:#f5f5f5; }
 
-  /* Status box above button */
+  /* Status text */
   #status {
-    position: fixed;
-    bottom: 80px;
-    right: 20px;
     font-size:14px;
     color:#555;
-    background: rgba(255,255,255,0.95);
-    padding:8px 12px;
-    border-radius:6px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.15);
-    max-width:250px;
-    z-index:9999;
-    word-wrap: break-word;
+    text-align: center;
+    width: 100%;
+    max-width: 500px;
   }
 
-  /* Hide default Botpress mic button */
-  .bpw-speech-button, .bpw-floating-button { display:none !important; }
+  /* Chat container */
+  #webchat {
+    width: 100%;
+    max-width: 500px;
+    height: 60vh;
+    margin-bottom: 20px;
+  }
 
-  /* Responsive adjustments for mobile */
-  @media (max-width: 600px) {
-    #voiceBtn {
-      bottom: 15px;
-      right: 15px;
-      padding: 12px;
-      font-size: 20px;
-    }
-    #status {
-      bottom: 70px;
-      right: 15px;
-      max-width: 200px;
-      font-size: 12px;
-    }
+  /* Hide Botpress floating button */
+  .bpw-floating-button { display:none !important; }
+
+  /* Make chat responsive */
+  @media (max-width: 600px){
+    #webchat { height: 70vh; }
+    #openBot { width: 90%; }
   }
 </style>
 
-<!-- Botpress Webchat Script -->
+<!-- Botpress Webchat -->
 <script src="https://cdn.botpress.cloud/webchat/v3.2/inject.js"></script>
-</head>
+
 <body>
 
+<!-- UWC Bot Button -->
+<button id="openBot">UWC Bot</button>
+
+<!-- Voice Controls -->
+<div id="voiceControls">
+  <button id="voiceBtn">🎤 Speak</button>
+  <button id="stopBtn">⏹ Stop Voice</button>
+</div>
+
+<!-- Status -->
+<div id="status"></div>
+
+<!-- Chat Container -->
 <div id="webchat"></div>
-<button id="voiceBtn" aria-label="Start or stop voice input">🎤</button>
-<div id="status" aria-live="polite">You can type below or use voice 🎤</div>
 
 <script>
   // Initialize Botpress
@@ -84,118 +93,94 @@
     clientId: '4122d265-45f6-47ff-ad06-007367e5444b',
     selector: '#webchat',
     configuration: {
-      enableTextInput:true,
-      enableVoice:false,
-      showConversationsButton:false,
-      themeMode:'light',
-      fontFamily:'Inter, Arial',
-      radius:4,
-      headerVariant:'glass',
-      color:'#3276EA',
+      enableTextInput: true,
+      showConversationsButton: false,
+      themeMode: 'light',
+      fontFamily: 'Inter, Arial',
+      radius: 4,
+      headerVariant: 'glass',
+      color: '#3276EA',
       footer: "[⚡ by Botpress](https://botpress.com/?from=webchat)"
     }
   });
 
+  // Wait until Botpress is ready
   (function ready(cb){
     if(window.botpressWebChat){ cb(); } 
     else { setTimeout(() => ready(cb), 100); }
   })(function(){
+    const openBotBtn = document.getElementById('openBot');
+    const voiceControls = document.getElementById('voiceControls');
     const voiceBtn = document.getElementById('voiceBtn');
+    const stopBtn = document.getElementById('stopBtn');
     const statusEl = document.getElementById('status');
 
-    // Text-to-Speech function
+    // Text-to-Speech
     function speak(text){
       window.speechSynthesis.cancel();
       const u = new SpeechSynthesisUtterance(text);
-      u.lang = 'en-US';
-      u.rate = 1.0;
+      u.lang='en-US'; 
+      u.rate=1.0;
       window.speechSynthesis.speak(u);
     }
 
-    // Audio cues
-    function playSound(type){
-      const audio = new Audio();
-      if(type === 'listening') audio.src = 'https://actions.google.com/sounds/v1/alarms/beep_short.ogg';
-      else if(type === 'stopped') audio.src = 'https://actions.google.com/sounds/v1/alarms/alarm_clock.ogg';
-      else if(type === 'botSpeaking') audio.src = 'https://actions.google.com/sounds/v1/alarms/digital_watch_alarm_long.ogg';
-      audio.play();
-    }
-
-    // Speak bot replies aloud
+    // Listen for bot messages
     window.botpressWebChat.onEvent('incoming.message', (event)=>{
       if(event.payload && event.payload.text){
-        playSound('botSpeaking');
         speak(event.payload.text);
       }
     });
 
-    // Speech-to-Text
+    // Speech recognition
     const Rec = window.SpeechRecognition || window.webkitSpeechRecognition;
-    if(!Rec){
-      statusEl.textContent = 'Voice features only work in Chrome. You can still type below.';
+    let rec, listening = false;
+    if(Rec){
+      rec = new Rec();
+      rec.lang = 'en-US';
+      rec.interimResults = false;
+
+      rec.onresult = (e)=>{
+        const said = e.results[0][0].transcript;
+        statusEl.textContent = `You said: ${said}`;
+        window.botpressWebChat.sendEvent({ type:'input.text', text: said });
+      };
+      rec.onerror = ()=>{
+        statusEl.textContent='Mic error. Try again.';
+        listening = false;
+        voiceBtn.disabled = false;
+      };
+      rec.onend = ()=>{
+        listening = false;
+        voiceBtn.disabled = false;
+        statusEl.textContent='You can type below or use voice 🎤';
+      };
+
+      voiceBtn.addEventListener('click', ()=>{
+        window.speechSynthesis.cancel();
+        statusEl.textContent='Listening… (allow mic if asked)';
+        voiceBtn.disabled = true;
+        listening = true;
+        rec.start();
+      });
+      stopBtn.addEventListener('click', ()=>window.speechSynthesis.cancel());
+    } else {
+      statusEl.textContent='Voice input not supported. Please use Chrome.';
       voiceBtn.disabled = true;
-      return;
     }
 
-    const rec = new Rec();
-    rec.lang = 'en-US';
-    rec.interimResults = false;
-    let listening = false;
-
-    voiceBtn.addEventListener('click', ()=>{
-      if(!listening){
-        // Start listening
-        rec.start();
-        listening = true;
-        voiceBtn.textContent = '⏹';
-        statusEl.textContent = 'Listening… (allow mic if asked)';
-        playSound('listening');
-      } else {
-        // Stop listening
-        rec.stop();
-        listening = false;
-        voiceBtn.textContent = '🎤';
-        statusEl.textContent = 'You can type below or use voice 🎤';
-        playSound('stopped');
-      }
-    });
-
-    rec.onresult = (e)=>{
-      const said = e.results[0][0].transcript;
-      statusEl.textContent = `You said: ${said}`;
-      window.botpressWebChat.sendEvent({
-        type:'input.text',
-        text:said,
-        payload:{},
-        channel:'web'
-      });
-    };
-
-    rec.onerror = ()=>{
-      statusEl.textContent = 'Mic error. Try again.';
-      listening = false;
-      voiceBtn.textContent='🎤';
-      playSound('stopped');
-    };
-
-    rec.onend = ()=>{
-      if(listening){
-        listening = false;
-        voiceBtn.textContent='🎤';
-        statusEl.textContent='You can type below or use voice 🎤';
-        playSound('stopped');
-      }
-    };
-
-    // Keyboard accessibility
-    voiceBtn.addEventListener('keyup', (e)=>{
-      if(e.key === 'Enter' || e.key === ' ') voiceBtn.click();
+    // Open bot when UWC Bot button clicked
+    openBotBtn.addEventListener('click', ()=>{
+      if(window.botpressWebChat) window.botpressWebChat.open();
+      voiceControls.style.display = 'flex';
+      statusEl.textContent='You can type below or use voice 🎤';
     });
   });
 </script>
 
 </body>
 </html>
+
+
 
 
 
